fixes for sizing on mobile devices

--- a/web/styles.css
+++ b/web/styles.css
@@ -21,7 +21,6 @@ body {
 }
 
 header {
-  height: 48px;
   line-height: 48px;
   padding: 0 24px;
   color: #fff;
@@ -36,8 +35,8 @@ header {
 }
 
 .header-title {
-  text-overflow: ellipsis;
   font-size: 16pt;
+  white-space: nowrap;
 }
 
 .header-title .minor {
@@ -46,16 +45,20 @@ header {
 
 .header-gist-name {
   text-overflow: ellipsis;
+  text-align: center;
+  overflow-x: hidden;
+  white-space: nowrap;
   margin-left: 1em;
   margin-right: 1em;
   color: #ccc;
   font-size: 14pt;
+  text-align: center;
 }
 
 .header-gist-id {
   text-overflow: ellipsis;
-  color: #ccc;
-  font-size: 10pt;
+  overflow-x: hidden;
+  max-width: 100px;
   text-transform: uppercase;
 }
 
@@ -77,7 +80,7 @@ footer {
 
 .view {
   margin: 0 0;
-  min-width: 200px;
+  min-width: 75px;
 }
 
 pre {
@@ -129,7 +132,6 @@ a[selected]:hover {
 }
 
 .header {
-  height: 24px;
   line-height: 24px;
   font-size: 12pt;
 }
@@ -174,7 +176,7 @@ button[disabled] {
 }
 
 #frame {
-  min-height: 100px;
+  min-height: 50px;
 }
 
 iframe {
@@ -241,7 +243,7 @@ div.toggle {
   line-height: 20px;
   display: block;
   position: relative;
-  min-height: 100px;
+  min-height: 50px;
   margin-top: 16px;
   margin-left: -3px;
 }
